# typoglycemia

./: .coverage  README.md  pyproject.toml
src/typoglycemia/: __init__.py  __main__.py  main.py
tests/: test_main.py
