[project]
name = "typoglycemia"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "hooli-dev", email = "t.hooli.jp@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"typoglycemia" = "typoglycemia.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/typoglycemia"]
